website/docs/v0.17.0/zh/concepts/page-context.mdx
---
title: Page Context 字段与生命周期
description: 了解 Test Kit 如何从渲染后的 DOM、可访问语义、组件边界、几何与浏览器计算样式生成有界页面上下文。
---

:::warning 发布候选
v0.17.0 已在 main 上准备完成，但尚未正式发布。安装示例仍固定到 v0.16.2，直到发布门禁被明确推进。
:::

# Page Context 字段与生命周期

Page Context 是 Test Kit 在浏览器渲染完成后生成的有界事实记录。它补充组件归属、源码提示、稳定定位器、多坐标空间几何和 UI 理解证据，并与浏览器可访问快照绑定成同一次观察。

Test Kit 是增强项。没有它，A3S Test 仍能依据浏览器可访问语义执行 Web 动作、断言和证据采集。需要组件、坐标、布局图、渲染态样式或人工点选时，再接入 Page Context。

## 三类浏览器事实如何配合

```text
浏览器完成样式计算与布局
        |
        +--> 可访问快照     角色、名称、原生状态
        |
        +--> Page Context   组件、定位器、几何、受控 facts
        |
        +--> UI 理解        样式、布局、重复结构、状态、动效
                         |
                         v
             同一观察编号与页面修订
```

| 来源            | 适合回答的问题                         | 不能替代的事实                      |
| --------------- | -------------------------------------- | ----------------------------------- |
| 可访问快照      | 哪些控件可被用户理解和操作             | 组件源码、完整布局关系和视觉样式    |
| Page Context    | 节点属于哪个组件，在哪里，怎样稳定定位 | 产品需求是否正确，模型建议是否合理  |
| UI 理解         | 当前布局、样式、状态和动效如何呈现     | 可访问语义、测试 verdict 和修复授权 |
| A3S Test 证据层 | 动作后实际出现了什么                   | 宿主应用声明的组件边界和业务 facts  |

UI 理解是 Page Context 中可选的嵌套记录。它不生成另一棵可访问树，也不会根据类名猜组件类型。

## Bridge 能做什么

页面通过非枚举的 Symbol 暴露 `a3s.test.page-context/1` bridge。业务代码通常只需挂载 provider，A3S Test 的浏览器驱动会完成探测和快照读取。需要在开发工具或自有集成中检查时，可以使用框架无关入口。

```ts
import { getPageContextBridge } from '@a3s-lab/testkit';

const bridge = getPageContextBridge();
if (!bridge) throw new Error('Test Kit is not enabled');

const summary = bridge.snapshot({
  detail: 'summary',
  scope: { kind: 'page' },
  limits: { nodes: 300, uiNodes: 120 },
});

const nextRevision = await bridge.waitForChange(summary.revision, 5_000);
```

| 方法                          | 返回或执行的内容                                          |
| ----------------------------- | --------------------------------------------------------- |
| `probe()`                     | 协议、SDK 版本和能力列表                                  |
| `snapshot(request)`           | 当前修订上的有界快照                                      |
| `resolve(nodeId)`             | 当前私有节点 ID 对应的实时 DOM 节点，仅供同页 bridge 使用 |
| `waitForChange(revision, ms)` | 等待语义修订推进，超时返回 `null`                         |
| `subscribe(listener)`         | 订阅修订、质量候选、设计建议和修复事件                    |
| `dispose()`                   | 移除观察器、监听器、portal 和私有状态                     |

Bridge 不提供 `eval`、Cookie、浏览器存储、任意网络请求、文件系统或 Shell。

## 按任务选择快照

### 明细级别

| `detail`   | 适用场景                                             |
| ---------- | ---------------------------------------------------- |
| `summary`  | 常规观察，读取主要语义、组件、定位器与有界 UI 证据   |
| `scoped`   | 深入一个节点、组件或区域，减少与当前任务无关的上下文 |
| `diff`     | 结合 `sinceRevision` 查看两个页面修订之间的变化      |
| `forensic` | 修复验证或设计审查，获取允许预算内的完整取证记录     |

### 范围

| `scope.kind` | 必要字段                              | 常见用途                       |
| ------------ | ------------------------------------- | ------------------------------ |
| `page`       | 无                                    | 页面级观察                     |
| `node`       | `nodeId`                              | 深入当前快照中的一个节点       |
| `component`  | `componentId`                         | 查看组件根、子节点和组件 facts |
| `region`     | 坐标空间、`x`、`y`、`width`、`height` | 检查视口或文档中的一块区域     |

范围只能引用当前修订上的私有身份。A3S Test 对外投影为观察绑定的 `@cN`，调用方不应持久化 `nodeId`。

## 快照字段

每次响应都包含 `protocol`、`sdkVersion`、`revision`、`page`、`components`、`nodes`、`facts`、可选 `ui`、`removedNodeIds`、`truncated` 和 `nextCursor`。

### 页面字段

| 路径                  | 含义                                                    |
| --------------------- | ------------------------------------------------------- |
| `page.id`             | 接入时声明的稳定页面标识                                |
| `page.url` 与 `route` | 当前完整 URL 和路由                                     |
| `page.ready`          | provider 与组件边界共同给出的当前就绪状态               |
| `page.viewport`       | 布局视口宽高、DPR 和可选 visual viewport                |
| `page.document`       | 当前文档尺寸                                            |
| `page.scroll`         | 当前文档滚动偏移                                        |
| `page.language`       | 当前 `<html lang>`                                      |
| `page.theme`          | 由显式声明或系统偏好得到的 `light`、`dark` 或 `unknown` |

### 组件字段

`A3STestBoundary` 可以为页面增加以下信息。

| 字段       | 内容                                                        |
| ---------- | ----------------------------------------------------------- |
| `id`       | 项目声明的组件标识                                          |
| `name`     | 便于人和 Agent 理解的组件名称                               |
| `parentId` | 可选父组件                                                  |
| `source`   | 可选文件、行和列提示，不作为文件写入授权                    |
| `ready`    | 组件是否完成当前渲染                                        |
| `facts`    | 项目显式返回并通过 JSON、深度、字符串和总字节限制的业务事实 |
| `boxes`    | 一个或多个真实根矩形，多根组件不会被合并成虚构的大矩形      |

边界是可选的。没有 `A3STestBoundary` 时，自动 DOM、开放 Shadow DOM、语义、定位器与几何采集仍会运行。

### 节点字段

| 字段             | 内容                                                           |
| ---------------- | -------------------------------------------------------------- |
| `id`、`parentId` | 只在当前 bridge 修订中有效的私有关系                           |
| `componentId`    | 节点所属的显式组件边界                                         |
| `tag`            | DOM 标签                                                       |
| `role`、`name`   | 可访问角色和名称                                               |
| `text`           | 经过长度限制与脱敏处理的可见文本                               |
| `state`          | visible、disabled、checked、selected、expanded、focused 等状态 |
| `locators`       | 按稳定性排序的语义与 CSS 候选                                  |
| `geometry`       | 三套坐标、可见比例、遮挡、定位、变换与滚动容器                 |
| `computedStyles` | 只在允许的明细和预算中返回的有界样式                           |

定位器候选优先顺序为角色与名称、label、test ID、placeholder、文本和 CSS。几何用于证据与最后退化，不能因为坐标存在就跳过语义定位。

## 几何和缩放

每个有渲染盒子的节点最多包含三套矩形。

| 坐标空间     | 计算方式                              | 适合用途                       |
| ------------ | ------------------------------------- | ------------------------------ |
| `viewport`   | `getBoundingClientRect()` 的 CSS 像素 | 当前视口内的命中与截图关联     |
| `document`   | 视口矩形加当前文档滚动偏移            | 跨滚动位置比较页面中的稳定位置 |
| `normalized` | 相对当前 visual viewport 的比例       | 在同一次观察中关联缩放后的画面 |

`normalized` 值可以小于 0 或大于 1，这表示盒子位于当前可见缩放区域之外。`page.viewport.width` 和 `height` 始终表示布局视口 CSS 像素。DPR 与可选 visual viewport 的偏移、尺寸和 scale 单独记录，不会把 CSS 像素乘成设备像素。

几何还包含 `visibleRatio`、`occluded`、`position`、`transformed` 和最近的 `scrollContainerNodeId`。固定与 sticky 元素不会被误写成普通文档位置，多根组件使用 `boxes` 保留真实边界。

## UI 理解记录

`a3s.test.ui-understanding/1` 记录浏览器已经计算出的视觉事实。

| 区块         | 具体证据                                                                                          |
| ------------ | ------------------------------------------------------------------------------------------------- |
| `style`      | 颜色、排版、间距、圆角、阴影、z-index、安全根级自定义属性和同源响应式条件                         |
| `layout`     | Flex、Grid、普通流、order、client 与 scroll 尺寸、逐轴 overflow 与裁剪、盒模型和图关系            |
| `components` | 标签、角色、稳定语义状态、有界子树形状和样式摘要形成的确定性重复结构指纹                          |
| `stateDiffs` | 页面真实出现的 hover、focus、focus-visible、checked、expanded、selected 和 disabled 差分          |
| `motion`     | transition、CSS 与 Web Animations、关键帧、document、scroll、view、named 时间轴和 animation range |

布局节点会分别保留物理 margin、border width、padding、`boxSizing`、`writingMode` 和 `direction`。这些字段说明浏览器结果，不推测逻辑布局意图。

UI 记录有独立 `observationId`。焦点、悬停或运行中的动画可能改变计算样式，但不一定改变页面语义修订。它的 `pageRevision`、viewport 和 scope 仍必须与外层 Page Context 完全一致。

重复结构不会把类名当作组件真相。状态采集不会主动移动焦点或派发事件。跨域样式表不会绕过浏览器限制，只会增加 `inaccessibleStyleSheets` 计数。

## 修订与公开引用

MutationObserver、ResizeObserver、路由、视口、滚动和相关表单变化会使缓存失效并推进单调修订号。没有变化的页面不会被轮询。

A3S Test 把浏览器可访问快照和 Test Kit 修订原子绑定。读取期间如果页面继续变化，驱动会拒绝竞态并要求重新观察。

| 引用  | 来源                           | 生命周期与权限                             |
| ----- | ------------------------------ | ------------------------------------------ |
| `@eN` | 浏览器可访问快照               | 当前观察内可操作，页面变化后失效           |
| `@cN` | 可唯一操作的 Page Context 节点 | 当前观察内可操作，并绑定组件、定位器和几何 |
| `@uN` | UI 理解中的补充证据节点        | 当前观察内只读，永远不能成为动作目标       |

任何导航、热更新或动态重排后都要重新观察。A3S Test 会在 ACL 准入或驱动执行前拒绝 `@uN`，也会拒绝绑定到旧观察的 `@eN` 与 `@cN`。

## 预算、截断与分页

安装级配置确定上限，每次 `snapshot()` 请求只能继续降低，不能提高。

| 预算              | 默认值  | 硬上限 |
| ----------------- | ------- | ------ |
| Page Context 节点 | 500     | 5,000  |
| 单字符串字节      | 4 KiB   | 16 KiB |
| Page Context 编码 | 1 MiB   | 8 MiB  |
| UI 采样节点       | 200     | 1,000  |
| UI 状态候选       | 200     | 1,000  |
| UI 采集时间       | 32 ms   | 100 ms |
| UI 编码           | 256 KiB | 1 MiB  |

返回 `truncated: true` 时，检查 `nextCursor` 并在相同修订和 scope 上继续读取。Cursor 对修订和范围有绑定，页面变化后不能复用。

UI 记录还有自己的 `budget.used`、`truncated` 和原因列表。如果 UI 投影无法同时满足图完整性和编码预算，A3S Test 会省略这块可选记录，保留外层语义观察。它不会为了塞进预算而返回断边、循环关系或私有身份。

单次不需要 UI 证据时使用 `snapshot({ ui: false })`。整个安装都不需要时设置 `uiUnderstanding={false}`。

## 隐私和宿主边界

运行时不会序列化以下内容。

- password 和 hidden input 的值。
- Cookie、localStorage、sessionStorage、请求头和 token。
- React、Vue 或 Svelte 的任意 props、state、fiber、闭包和内部对象。
- `redact` 选择器覆盖的文本。
- 跨域 iframe 内容和跨域样式规则。
- summary 模式下的完整 computed style。

私有节点 ID 存在 `WeakMap` 侧表中。Test Kit 不会把 ID、坐标、组件归属或源码路径写进业务 DOM 属性。`facts` 只接受项目主动返回的 JSON 值，并经过相同的深度、键、字符串和编码限制。

## 常见问题定位

| 现象                          | 常见原因                             | 处理方式                                                     |
| ----------------------------- | ------------------------------------ | ------------------------------------------------------------ |
| `getPageContextBridge()` 为空 | provider 未启用、仍在 SSR 或已经卸载 | 确认只在浏览器中调用，并显式设置 `enabled={true}`            |
| 组件没有 `source`             | 没有边界或边界未提供 source          | 增加 `A3STestBoundary`，把 source 当提示而不是授权           |
| 快照立即过期                  | 页面在加载、动画或热更新期间持续变化 | 等待 `page.ready`，重新观察，不复用旧引用                    |
| 找不到某个 Shadow DOM 节点    | Shadow Root 是 closed                | 改为 open，或通过显式边界和可访问语义提供必要上下文          |
| `truncated` 持续为 true       | 页面超过安装或请求预算               | 缩小 scope、降低 detail、使用 cursor，或有依据地提高安装上限 |
| 没有 UI 理解                  | 请求关闭、安装关闭或图与预算校验失败 | 检查 `ui` 配置和预算；外层 Page Context 仍可继续使用         |
| `@cN` 动作被拒绝              | 引用来自旧观察或不再唯一             | 重新观察，并优先选择新的语义定位器                           |

继续阅读[接入 Web Test Kit](../guide/testkit.mdx)完成安装，或查看[人工评审与修复](../guide/repairs.mdx)了解 Page Context 如何随明确发送的问题进入修复验证。
